--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 .vs/LP-TP1-Farmacia/v15/sqlite3/storage.ide
 LP-TP1-Farmacia/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
 LP-TP1-Farmacia/obj/Debug/LP-TP1-Farmacia.csproj.CoreCompileInputs.cache
+.vs/LP-TP1-Farmacia/v15/.suo
+.vs/LP-TP1-Farmacia/v15/sqlite3/storage.ide
+LP-TP1-Farmacia/obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
+LP-TP1-Farmacia/obj/Debug/LP-TP1-Farmacia.csproj.CoreCompileInputs.cache
